# lektrix

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  environment.yml  lektrix  pyproject.toml  requirements.txt  tox.ini
.github/: dependabot.yml
.local/fles/: kratlib.py
docs/: HARVI.md  ZAPPI.md  lektrix.dot  trends.md
legacy/: kamstrup.py  lektrix.kamstrup.service  libkamstrup.py  libmyenergi.py  pricetrend.py  trendyg.py
services/: lektrix.fles.service  lektrix.kamstrup.service  lektrix.myenergi.service  lektrix.prices.service  lektrix.prices.timer  lektrix.sessy.service  lektrix.solaredge.service  lektrix.trend.day.service  lektrix.trend.day.timer  lektrix.trend.month.service  lektrix.trend.month.timer  lektrix.trend.year.service  lektrix.trend.year.timer  lektrix.update.notinstalled_service  lektrix.update.notinstalled_timer  lektrix.update.service  lektrix.update.timer  lektrix.wizkwh.service  lektrix.wizp1.service  lektrix.zappi.service
www/: index.html
www/test/: index.html
