# Project: lektrix

[project]
name = "lektrix"
version = "0.0.0"   # rolling release has no version
description = "monitoring electricity management devices"
dependencies = [
    "gracefulkiller",
    "matplotlib",
    "mausy5043-common",
    "numpy",
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
    "pyserial==3.5",
    "python-dateutil",
    "pytz",
    "requests",
    "sh",
    "tabulate",
    ]
license = "MIT"
authors = [
  { name="Mausy5043" },
  ]
readme = "README.md"
requires-python = ">=3.11"


[tool.autopep8]
max_line_length = 98
in-place = true
recursive = true
aggressive = 2
ignore = "E203"

[tool.bandit]
skips = []

[tool.black]
line-length = 98
target-version = ["py39", "py310", "py311", "py312"]

[tool.flake8]
max_line_length = 98
ignore = [
# <M> is too complex; we don't care about complexity,
    "C901",
# whitespace before ':'; `black` enforces white-space before and after ':', so can be ignored.
    "E203",
# module level import not at top of file; handled by `pylint`
    "E402",
# line too long; is handled by `pylint`
    "E501",
# line break before binary operator; `black` enforces this
    "W503",
]

[tool.isort]
profile = "black"
py_version="auto"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped", "annotation-unchecked"]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
#disallow_untyped_calls = true
no_implicit_reexport = true
check_untyped_defs = true
extra_checks = true


[tool.pydocstyle]
inherit = false
convention = 'google'
match = '.*\\.py'
add-ignore = 'D'
