# Project: lektrix

# when changing dependencies also consider `requirements.txt` and `environment.yml`

[project]
name = "lektrix"
version = "0.0.0"   # rolling release has no version
description = "monitoring electricity management devices"
dependencies = [
    "gracefulkiller==0.4.7",
    "matplotlib==3.9.3",
    "mausy5043-common==1.8.2",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "pyarrow==18.1.0",
    "pyserial==3.5",
    "python-dateutil==2.9.0.post0",
    "python-homewizard-energy==7.0.0",
    "pytz==2024.2",
    "requests==2.32.3",
    "sh==2.1.0",
    "tabulate==0.9.0",
    "zeroconf==0.136.2",
    ]
license = {file = "LICENSE"}
authors = [
  { name="Mausy5043" },
  ]
readme = "README.md"
requires-python = ">=3.12"


[tool.autopep8]
max_line_length = 98
in-place = true
recursive = true
aggressive = 2
ignore = "E203"

[tool.bandit]
skips = []

[tool.black]
line-length = 98
target-version = ["py312"]

[tool.flake8]
max_line_length = 98
ignore = [
# <M> is too complex; we don't care about complexity,
    "C901",
# whitespace before ':'; `black` enforces white-space before and after ':', so can be ignored.
    "E203",
# module level import not at top of file; handled by `pylint`
    "E402",
# line too long; is handled by `pylint`
    "E501",
# line break before binary operator; `black` enforces this
    "W503",
]

[tool.isort]
profile = "black"
py_version="auto"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped", "annotation-unchecked"]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
#disallow_untyped_calls = true
no_implicit_reexport = true
check_untyped_defs = true
extra_checks = true

[tool.pydocstyle]
inherit = false
convention = 'google'
match = '.*\\.py'
add-ignore = 'D'

[tool.pyright]
reportAttributeAccessIssue="none"
