# Project: lektrix

# when changing dependencies also consider `requirements.txt` and `environment.yml`

[project]
name = "lektrix"
version = "0.0.0"   # rolling release has no version
description = "monitoring electricity management devices"
dependencies = [
    "gracefulkiller==0.4.7",
    "matplotlib==3.10.0",
    "mausy5043-common==1.10.1",
    "numpy==2.2.1",
    "pandas==2.2.3",
    "py-solaredge==0.0.4.9",
    "pyarrow==18.1.0",
    "pyserial==3.5",
    "python-dateutil==2.9.0.post0",
    "python-homewizard-energy==7.0.0",
    "pytz==2024.2",
    "requests==2.32.3",
    "sh==2.1.0",
    "tabulate==0.9.0",
    "zeroconf==0.136.2",
    ]
license = {file = "LICENSE"}
authors = [
  { name="Mausy5043" },
  ]
readme = "README.md"
requires-python = ">=3.12"

[tool.autopep8]
max_line_length = 98
in-place = true
recursive = true
aggressive = 2
ignore = [
    # whitespace before ':': is enforced by black
    "E203"
    ]

[tool.bandit]
skips = []

[tool.black]
line-length = 98
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
py_version="auto"

[tool.flake8]
max_line_length = 98
ignore = [
    # function too complex: is what we do ;-)
    "C901",
    # whitespace before ':': is enforced by black
    "E203",
    # module level import not at top of file
    "E402",
    # line too long: is checked by pylint
    "E501",
    # do not use bare 'except':  don't care
    "E722",
    # line break before binary: is against policy.
    "W503",
    ]

[tool.mypy]
# ignore_errors = true
strict = false
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
# disallow_untyped_calls = true
no_implicit_reexport = true
extra_checks = true

[tool.pydocstyle]
inherit = false
convention = "google"
match = ".*\\.py"
add-ignore = "D"

[tool.ruff]
fix = true
indent-width = 4
line-length = 98
output-format = "concise"
include = ["pyproject.toml", "bin/**/*.py"]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "preserve"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP", "W"]
ignore = [
    # line too long: formatter is leading
    "E501"
    ]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# pylint is controlled by .pylintrc


[tool.pyright]
reportAttributeAccessIssue="none"
